Add an <application> tag to the manifest
Some testing infrastructure requires this.

Change-Id: I33080ef9230b961e0e6453c3e631e1219e97e18a

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,4 +23,6 @@
         android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.VIBRATE" />
+
+    <application />
 </manifest>
